--- a/config/thin.yml
+++ b/config/thin.yml
@@ -19,9 +19,12 @@
 
 # config/thin.yml
 # like: thin start -a localhost -p 3000
-address: localhost
+# config/thin.yml
+address: 127.0.0.1
 port: 3000
-
+environment: development # production
+timeout: 30
+servers: 2
 
 # To specify multiple hosts and ports in Thin web server,
 # you can use the -a and -p options with a comma-separated list of values.
